<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigatorDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary">

        <include
            layout="@layout/primary_tool_bar" />

        <FrameLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">


            <androidx.drawerlayout.widget.DrawerLayout
                android:id="@+id/drawer_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary" >

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/swipeRefreshLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primary" >

                    <LinearLayout
                        android:id="@+id/searchOutLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/primary" >

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="0dp"
                            android:background="@color/primary">

                            <SearchView
                                android:id="@+id/searchViewProducts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="0dp"
                                android:background="@color/primary"
                                android:iconifiedByDefault="false"
                                android:queryHint="Search products..." />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingHorizontal="20dp"
                            android:layout_marginTop="20dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:gravity="end|center_vertical"
                                android:orientation="horizontal">

                                <Spinner
                                    android:id="@+id/spinnerSort"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:entries="@array/sorting_options"
                                    android:gravity="right" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="end"
                                    android:paddingEnd="10dp"
                                    android:src="@drawable/filter" />

                                <ImageButton
                                    android:id="@+id/arrowButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@android:color/transparent"
                                    android:padding="0dp"
                                    android:rotation="90"
                                    android:src="@drawable/expand_more" />
                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textViewNoProducts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="No products found"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:visibility="gone" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewProducts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp" />
                    </LinearLayout>
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <LinearLayout
                    android:id="@+id/right_drawer"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:background="@color/secondary"
                    android:elevation="4dp"
                    android:layout_gravity="end"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="40dp">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Price Range"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="20dp"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/editTextMinPrice"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="@drawable/common_border_background"
                                    android:hint="Min Price"
                                    android:inputType="numberDecimal"
                                    android:padding="10dp"
                                    android:textColor="@color/white"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingHorizontal="8dp"
                                    android:text="-"
                                    android:textSize="20sp"
                                    android:textColor="@color/white"/>

                                <EditText
                                    android:id="@+id/editTextMaxPrice"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="@drawable/common_border_background"
                                    android:hint="Max Price"
                                    android:inputType="numberDecimal"
                                    android:padding="10dp"
                                    android:textColor="@color/white"/>
                            </LinearLayout>

                            <TextView
                                android:id="@+id/textViewPriceRange"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="Selected Range: $0 - $1000"
                                android:textSize="14sp"
                                android:textColor="@color/white" />

                            <Button
                                android:id="@+id/buttonClearPriceFilter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="10dp"
                                android:background="@drawable/primary_button"
                                android:layout_marginBottom="30dp"
                                android:text="Clear Price Filter"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="20dp"
                                android:text="Filter by Rating"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                            <RadioGroup
                                android:id="@+id/radioGroupRatings"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:textColor="@color/white" >

                                <RadioButton
                                    android:id="@+id/radioRating1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="> 1 Star"
                                    android:textColor="@color/white"/>

                                <RadioButton
                                    android:id="@+id/radioRating2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="> 2 Stars"
                                    android:textColor="@color/white"/>

                                <RadioButton
                                    android:id="@+id/radioRating3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="> 3 Stars"
                                    android:textColor="@color/white"/>

                                <RadioButton
                                    android:id="@+id/radioRating4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="> 4 Stars"
                                    android:textColor="@color/white"/>
                            </RadioGroup>

                            <Button
                                android:id="@+id/buttonClearRatingFilter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/primary_button"
                                android:paddingHorizontal="10dp"
                                android:layout_marginBottom="30dp"
                                android:text="Clear Rating Filter"
                                android:textColor="@color/white"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="20dp"
                                android:text="Filter by Category"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:id="@+id/categoryContainer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            </LinearLayout>

                            <Button
                                android:id="@+id/buttonClearCategoryFilter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/primary_button"
                                android:layout_marginTop="10dp"
                                android:paddingHorizontal="10dp"
                                android:text="Clear Category Filter"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

            </androidx.drawerlayout.widget.DrawerLayout>


        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        app:menu="@menu/drawer_items"
        app:dividerInsetStart="60dp"
        app:itemIconPadding="30dp"
        android:background="@color/primary"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start" />


</androidx.drawerlayout.widget.DrawerLayout>