<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1">

        <item
            android:id="@+id/navHome"
            android:icon="@drawable/home"
            android:title="Home" />

    </group>

    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/navCart"
            android:icon="@drawable/cart"
            android:title="Cart" />
    </group>

    <group
        android:id="@+id/group3">
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/logout"
            android:title="Logout" />
    </group>

</menu>